--- a/pom.xml
+++ b/pom.xml
@@ -12,11 +12,17 @@
     <name>ATHChunkClaim</name>
     <description>Chunk Claim Plugin</description>
 
+    <properties>
+        <maven.compiler.target>8</maven.compiler.target>
+        <maven.compiler.source>8</maven.compiler.source>
+    </properties>
+
     <modules>
         <module>core</module>
         <module>worldguard6</module>
         <module>worldguard7</module>
         <module>dist</module>
+        <module>bridge</module>
     </modules>
 
     <repositories>
@@ -40,14 +46,10 @@
             <id>jitpack.io</id>
             <url>https://jitpack.io</url>
         </repository>
+        <repository>
+            <id>minecraft</id>
+            <url>https://libraries.minecraft.net</url>
+        </repository>
     </repositories>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.spigotmc</groupId>
-            <artifactId>spigot</artifactId>
-            <version>1.12.2-R0.1-SNAPSHOT</version>
-            <scope>provided</scope>
-        </dependency>
-    </dependencies>
 </project>
